workloads/etcd/manifest/etcd.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: etcd
  labels:
    app.kubernetes.io/name: etcd
    app.kubernetes.io/component: etcd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: etcd
      app.kubernetes.io/component: etcd
  ingress:
  - toPorts:
    - ports:
      - port: "2379"
    fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": coredns
        app.kubernetes.io/name: coredns
        app.kubernetes.io/component: coredns
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": external-dns
        app.kubernetes.io/name: external-dns
        app.kubernetes.io/component: external-dns
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
  labels:
    app.kubernetes.io/name: etcd
    app.kubernetes.io/component: etcd
spec:
  ipFamilyPolicy: RequireDualStack
  type: ClusterIP
  clusterIP: cluster.etcd.fixedIP
  clusterIPs:
  - cluster.etcd.fixedIPv4
  - cluster.etcd.fixedIPv6
  selector:
    app.kubernetes.io/name: etcd
    app.kubernetes.io/component: etcd
  ports:
  - name: etcd-client
    port: 2379
  - name: etcd-peer
    port: 2380
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: etcd
spec:
  serviceName: etcd
  selector:
    matchLabels:
      app.kubernetes.io/name: etcd
      app.kubernetes.io/component: etcd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: etcd
        app.kubernetes.io/component: etcd
    spec:
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.5.13
        securityContext:
          readOnlyRootFilesystem: true
        command: [/usr/local/bin/etcd]
        args:
        - --data-dir=/etcd-data
        - --name=etcd
        - --initial-advertise-peer-urls=http://127.0.0.1:2380
        - --listen-peer-urls=http://0.0.0.0:2380
        - --advertise-client-urls=http://127.0.0.1:2379
        - --listen-client-urls=http://0.0.0.0:2379
        - --initial-cluster=etcd=http://127.0.0.1:2380
        ports:
        - name: etcd-client
          containerPort: 2379
        - name: etcd-peer
          containerPort: 2380
        livenessProbe:
          timeoutSeconds: 5
          exec:
            command: [etcdctl, endpoint, health, --endpoints, '127.0.0.1:2380']
        readinessProbe:
          timeoutSeconds: 5
          exec:
            command: [etcdctl, endpoint, health, --endpoints, '127.0.0.1:2380']
        volumeMounts:
        - name: data
          mountPath: /etcd-data
      volumes:
      - name: config
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: nas-nfs-workloads
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: 1Gi
